# Shitank

./: README.md  pyproject.toml
src/server/: __main__.py
src/util/: __init__.py
