[project]
name = "Shitank"
version = "0.0.0"
description = "Shitty multiplayer 2d tanks"
authors = [
    {name = "Paul Frische", email = "paul@paulfrische.xyz"},
]
dependencies = ["pygame"]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
